# rast

./: .clang-format  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
graphics/: CMakeLists.txt
graphics/inc/graphics/: Window.hpp
graphics/src/: Window.cpp
samples/: CMakeLists.txt
samples/01-ClearScreen/: CMakeLists.txt  main.cpp
